Credential fix (retirer les id des updates) + ajouts des Tokens